[package]
name = "rinha"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.5.0"
chrono = "0.4.34"
deadpool-postgres = { version = "0.12.1", features = ["serde"] }
postgres = "0.19.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"